# World-Bank-Capstone-Quantitative-Model

./: main.py  pyproject.toml
data/: country_map.csv
data/cache/: wdi.csv
data/processed/: alignment_scores.csv  capacity_scores.csv  master.csv  run_metadata.json
data/raw/: ifc_presence.csv
openspec/changes/donor-readiness-index/: tasks.md
outputs/: dri_output.csv  heckman_diagnostics.txt
src/: build_panel.py  capacity.py  heckman.py  ingest.py  report.py
