[project]
name = "quantmod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "plotly>=6.7.0",
    "requests>=2.31",
    "seaborn>=0.12",
    "wbdata>=1.0",
]
